# mcp-memory-server

./: INSTALL.md  PHASE_1_IMPLEMENTATION_PLAN.md  README.md  package.json  pyproject.toml  spec.md
.claude/: config.json
.claude/agents/: brainstormer.md  git-manager.md  scout.md
.claude/commands/: auto-feature.md  brainstorm.md  cook.md  debug.md  explain.md
.claude/skills/: Python-copy.md  Simplification Cascades-copy.md  TypeScript-copy.md  Verification Before Completion-copy.md  When Stuck-copy.md
docs/: IMPLEMENTATION_PLAN.md  TESTING_PLAN.md
scripts/: migrate-to-lancedb.ts
src/: index.ts
src/config/: index.ts
src/db/: connection.ts  memory.repository.ts  schema.ts
src/mcp/: handlers.ts  server.ts  tools.ts
src/memory_server/: __init__.py  __main__.py  server.py  service.py
src/memory_server/config/: __init__.py  settings.py
src/memory_server/database/: __init__.py  manager.py  schema.py
src/memory_server/embedding/: __init__.py  cache.py  service.py
src/memory_server/tools/: __init__.py  delete.py  list.py  search.py  store.py
src/memory_server/utils/: __init__.py  logger.py  scoring.py
src/services/: embeddings.service.ts  memory.service.ts
tests/: conftest.py  embeddings.test.ts  server.test.ts  store.test.ts
tests/fixtures/: MEMORIES-SEED.md  seed_memories.py
tests/integration/: test_end_to_end.py  test_mcp_client.py
tests/unit/: test_database.py  test_embeddings.py  test_scoring.py  test_service.py
